# src/entities/Movimentacao.ts
@@ -3,11 +3,18 @@ import { Entity, PrimaryGeneratedColumn, Column, ManyToOne, CreateDateColumn, Up
 import { UsuarioConta } from "./UsuarioConta";
 
 export enum TipoMovimentacao {
-    TRANSFERENCIA_ENVIADA = "transferencia_enviada",
-    TRANSFERENCIA_RECEBIDA = "transferencia_recebida",
-    COMPRA_CREDITO = "compra_credito",
-    PAGAMENTO_FATURA = "pagamento_fatura",
-    DEPOSITO = "deposito"
+    DEPOSITO = 'DEPOSITO',
+    SAQUE = 'SAQUE',
+    TRANSFERENCIA = 'TRANSFERENCIA',
+    PIX = 'PIX',
+    PAGAMENTO_DEBITO = 'PAGAMENTO_DEBITO',
+    PAGAMENTO_CREDITO = 'PAGAMENTO_CREDITO',
+    PAGAMENTO_FATURA = 'PAGAMENTO_FATURA',
+    INVESTIMENTO = 'INVESTIMENTO',
+    RESGATE_INVESTIMENTO = 'RESGATE_INVESTIMENTO',
+    RENDIMENTO = 'RENDIMENTO',
+    TAXA = 'TAXA',
+    ESTORNO = 'ESTORNO'
 }
 
 @Entity("movimentacoes")
@@ -33,11 +40,75 @@ export class Movimentacao {
     @Column("text", { nullable: true })
     contaOrigem?: string;
 
-    @Column("text", { nullable: true })
+    @Column({
+        type: 'varchar',
+        length: 10,
+        nullable: true
+    })
     agenciaDestino?: string;
 
-    @Column("text", { nullable: true })
+    @Column({
+        type: 'varchar',
+        length: 20,
+        nullable: true
+    })
     contaDestino?: string;
+
+    @Column({
+        type: 'varchar',
+        length: 100,
+        nullable: true
+    })
+    nomeDestinatario?: string;
+
+    @Column({
+        type: 'varchar',
+        length: 50,
+        nullable: true
+    })
+    chavePix?: string;
+
+    @Column({
+        type: 'varchar',
+        length: 20,
+        nullable: true
+    })
+    tipoChavePix?: string;
+
+    @Column({
+        type: 'varchar',
+        length: 100,
+        nullable: true
+    })
+    codigoTransacao?: string;
+
+    @Column({
+        type: 'varchar',
+        length: 20,
+        default: 'CONCLUIDA'
+    })
+    status: string;
+
+    @Column({
+        type: 'decimal',
+        precision: 10,
+        scale: 2,
+        nullable: true
+    })
+    taxa?: number;
+
+    @Column({
+        type: 'varchar',
+        length: 50,
+        nullable: true
+    })
+    categoria?: string;
+
+    @Column({
+        type: 'text',
+        nullable: true
+    })
+    observacoes?: string;
 
     @Column("text", { nullable: true })
     estabelecimento?: string;
@@ -46,7 +117,7 @@ export class Movimentacao {
     usuarioConta!: UsuarioConta;
 
     @CreateDateColumn()
-    data!: Date;
+    dataCriacao!: Date;
 
     @UpdateDateColumn()
     dataAtualizacao!: Date;
